--- a/front-end/Shoes.html
+++ b/front-end/Shoes.html
@@ -8,8 +8,8 @@
 <body>
    
     <section class="w3-container w3-center w3-padding">
-        <h2>Product</h2>
-        <div id="product"></div>
+        <h2>Shoes</h2>
+        <div id="Shoes"></div>
     </section>
 <form>
     <input>
